# push-to-talk

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  speaker-profile.example.md
bundle/: Info.plist
src/: audio.rs  calibrate.rs  config.rs  db.rs  history.rs  hotkey.rs  ipc.rs  main.rs  notification.rs  paste.rs  transcribe.rs  transcript.rs
